Adicionado o reset do estilo junto com algumas propriedades iniciais, tambem foram colocadas tags html referentes ao cabecalho.

--- a/index.html
+++ b/index.html
@@ -6,9 +6,18 @@
 	<meta name="description" content="">
 	<meta name="keywords" content="">
 	<meta name="author" content="Hugo da Rocha">
+	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+	<link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 	<title>NodeShop - Loja de informática</title>
 </head>
 <body>
-	
+	<header class="cabecalho">
+		<h1><a href="index.html" title="NodeShop - Loja de informática">NodeShop - Loja de informática</a></h1>
+		<form method="POST">
+			<input type="text" placeholder="Faça uma busca">
+			<button><i class="fas fa-search"></i></button>
+		</form>
+	</header>
 </body>
 </html>
