--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 </head>
 <body>
 	<header class="cabecalho">
-		<h1><a href="index.html" title="NodeShop - Loja de informática">NodeShop - Loja de informática</a></h1>
+		<h1 class="logo"><a href="index.html" title="NodeShop - Loja de informática">NodeShop - Loja de informática</a></h1>
 		<form method="POST">
 			<input type="text" placeholder="Faça uma busca">
-			<button><i class="fas fa-search"></i></button>
+			<button><i class="fas fa-search fa-lg"></i></button>
 		</form>
 	</header>
 </body>
