--- a/index.html
+++ b/index.html
@@ -39,6 +39,17 @@
 			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, voluptatum labore incidunt, quaerat recusandae libero aliquid rem doloremque nobis quos repudiandae dignissimos necessitatibus perspiciatis ut! Assumenda expedita iste excepturi ullam impedit ex, voluptas officia sapiente, maiores, ipsam possimus deleniti nobis, eaque magnam velit? Nesciunt deserunt dolores voluptatum assumenda totam omnis voluptate cumque deleniti aliquam reprehenderit dolore, magnam dolor error! Recusandae quibusdam maxime, voluptates totam placeat perferendis porro. Est sint quisquam esse consequatur facere voluptas quaerat mollitia eum, et, cupiditate, incidunt, inventore optio hic accusamus blanditiis dolore exercitationem praesentium aliquam. Beatae dicta at corrupti mollitia doloribus dolorum velit explicabo cupiditate nam.</p><br>
 			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem dolore, est dicta fugiat. Doloremque in reprehenderit dolore facilis id qui. Non quas vero cumque voluptatibus vitae, nemo aliquam quasi tempore fugiat, iusto, quibusdam ipsum excepturi. Enim soluta asperiores quo incidunt nesciunt dignissimos qui dolore sapiente vitae sed porro iste dolorum cupiditate sunt, ducimus animi iusto inventore possimus optio nihil tempore ab harum debitis. Laborum, nobis officiis quibusdam. Autem quae saepe adipisci, iste, temporibus velit reprehenderit doloribus pariatur vitae dolor facere? Similique nemo quo sit quod, voluptate dignissimos porro dicta numquam laudantium vel, ut amet odio fuga aut asperiores assumenda at!</p>
 		</article>
+		<aside class="onde-estamos">
+			<h2>Onde estamos</h2>
+			<p>Av. Jucá Leão - Centro Comercial, Itabuna - BA</p>
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3857.527281028673!2d-39.286704885157356!3d-14.795636189678495!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x739aaf0cc0db597%3A0x9dfa10026b580036!2sAv.%20Juca%20Le%C3%A3o%2C%20Itabuna%20-%20BA!5e0!3m2!1spt-BR!2sbr!4v1631057029689!5m2!1spt-BR!2sbr" allowfullscreen="" loading="lazy"></iframe>
+			<h2>Contatos</h2>
+			<ul>
+				<li><i class="fas fa-phone fa-lg"></i> (00) 00000-0000</li>
+				<li><i class="fab fa-whatsapp fa-lg"></i> (00) 00000-0000</li>
+				<li><i class="far fa-envelope"></i> um_exemplo@gmail.com</li>
+			</ul>
+		</aside>
 	</main>
 </body>
 </html>
