Adicionada a parte de newsletter e de copyright do site, ambos em seu rodape, e modificada as tags meta relacionadas a descricao e as keywords da pagina. Tambem foi adicionado o README do projeto, contendo uma breve descricao do mesmo.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="">
-	<meta name="keywords" content="">
+	<meta name="description" content="Um site simples de uma empresa fictícia de informática">
+	<meta name="keywords" content="empresa,fictícia,informatica,empresa">
 	<meta name="author" content="Hugo da Rocha">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
@@ -51,5 +51,17 @@
 			</ul>
 		</aside>
 	</main>
+	<section class="newsletter">
+		<h3>Newsletter</h3>
+		<p>Receba nossas promoções por email</p>
+		<form method="POST">
+			<input type="text" placeholder="Seu nome">
+			<input type="email" placeholder="Seu email">
+			<button>Cadastrar</button>
+		</form>
+	</section>
+	<footer class="rodape">
+		<p>&copy; NodeShop - Todos os direitos reservados.</p>
+	</footer>
 </body>
 </html>
